[package]
name = "tello-edu"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only"
description = "A library for controlling and interacting with the Tello EDU drone."
repository = "https://github.com/robagar/tello-edu-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.27.0", features=["rt-multi-thread", "macros", "time", "net"] }
thiserror = "*"
