[package]
name = "tello-edu"
version = "0.5.0"
edition = "2021"
license = "LGPL-2.1-only"
description = "A library for controlling and interacting with the Tello EDU drone."
repository = "https://github.com/robagar/tello-edu-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.27", features=["rt-multi-thread", "macros", "time", "net", "sync"] }
thiserror = "1"
bytebuffer = "2.1"

[dev-dependencies]
sdl2 = "0.35"
openh264 = { version="0.4", features=["decoder"] }
anyhow = "1.0"
